--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    
+    <!-- EmailJS SDK -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -708,6 +711,9 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
+    <!-- Email Service Scripts -->
+    <script src="js/email-config.js"></script>
+    <script src="js/email-service.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
