Update pricing to competitive .15 per item (40% less than competitors)

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                 <span class="section-badge">Flexible Plans</span>
                 <h2 class="section-title">Choose Your Plan</h2>
                 <p class="section-description">
-                    Transparent pricing with no hidden fees. Scale as you grow.
+                    Competitive per-item pricing at $0.15/item - 40% less than competitors. No hidden fees.
                 </p>
             </div>
             <div class="pricing-grid">
@@ -500,8 +500,11 @@
                         <h3>Starter</h3>
                         <div class="price">
                             <span class="currency">$</span>
-                            <span class="amount">2,999</span>
+                            <span class="amount">1,500</span>
                             <span class="period">/project</span>
+                        </div>
+                        <div style="color: #64748B; font-size: 0.875rem; margin-top: 0.5rem;">
+                            $0.15 per work item
                         </div>
                     </div>
                     <ul class="pricing-features">
@@ -510,6 +513,7 @@
                         <li><i class="fas fa-check"></i> AI-powered analysis</li>
                         <li><i class="fas fa-check"></i> Email support</li>
                         <li><i class="fas fa-check"></i> 30-day support window</li>
+                        <li style="color: #0066FF; font-weight: 600;"><i class="fas fa-tag"></i> Save 40% vs competitors</li>
                     </ul>
                     <a href="#contact" class="btn btn-outline">Get Started</a>
                 </div>
@@ -519,8 +523,11 @@
                         <h3>Professional</h3>
                         <div class="price">
                             <span class="currency">$</span>
-                            <span class="amount">9,999</span>
+                            <span class="amount">12,000</span>
                             <span class="period">/project</span>
+                        </div>
+                        <div style="color: #64748B; font-size: 0.875rem; margin-top: 0.5rem;">
+                            $0.12 per work item (20% bulk discount)
                         </div>
                     </div>
                     <ul class="pricing-features">
@@ -531,6 +538,7 @@
                         <li><i class="fas fa-check"></i> 90-day support window</li>
                         <li><i class="fas fa-check"></i> Custom field mapping</li>
                         <li><i class="fas fa-check"></i> Dedicated migration consultant</li>
+                        <li style="color: #0066FF; font-weight: 600;"><i class="fas fa-tag"></i> Best value - 52% cheaper!</li>
                     </ul>
                     <a href="#contact" class="btn btn-primary">Get Started</a>
                 </div>
@@ -539,6 +547,9 @@
                         <h3>Enterprise</h3>
                         <div class="price">
                             <span class="amount">Custom</span>
+                        </div>
+                        <div style="color: #64748B; font-size: 0.875rem; margin-top: 0.5rem;">
+                            $0.10 per work item (volume pricing)
                         </div>
                     </div>
                     <ul class="pricing-features">
@@ -550,6 +561,7 @@
                         <li><i class="fas fa-check"></i> Custom integrations</li>
                         <li><i class="fas fa-check"></i> On-premise deployment</li>
                         <li><i class="fas fa-check"></i> SLA guarantees</li>
+                        <li style="color: #0066FF; font-weight: 600;"><i class="fas fa-tag"></i> Up to 60% savings</li>
                     </ul>
                     <a href="#contact" class="btn btn-outline">Contact Sales</a>
                 </div>
