Update pricing: Starter .25, Professional .20, Enterprise .18 per item

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                 <span class="section-badge">Flexible Plans</span>
                 <h2 class="section-title">Choose Your Plan</h2>
                 <p class="section-description">
-                    Competitive per-item pricing at $0.20/item - 20% less than competitors. No hidden fees.
+                    Transparent pricing with volume discounts. Enterprise-grade features at competitive rates.
                 </p>
             </div>
             <div class="pricing-grid">
@@ -500,11 +500,11 @@
                         <h3>Starter</h3>
                         <div class="price">
                             <span class="currency">$</span>
-                            <span class="amount">2,000</span>
+                            <span class="amount">2,500</span>
                             <span class="period">/project</span>
                         </div>
                         <div style="color: #64748B; font-size: 0.875rem; margin-top: 0.5rem;">
-                            $0.20 per work item
+                            $0.25 per work item
                         </div>
                     </div>
                     <ul class="pricing-features">
@@ -513,7 +513,6 @@
                         <li><i class="fas fa-check"></i> AI-powered analysis</li>
                         <li><i class="fas fa-check"></i> Email support</li>
                         <li><i class="fas fa-check"></i> 30-day support window</li>
-                        <li style="color: #0066FF; font-weight: 600;"><i class="fas fa-tag"></i> Save 20% vs competitors</li>
                     </ul>
                     <a href="#contact" class="btn btn-outline">Get Started</a>
                 </div>
@@ -523,11 +522,11 @@
                         <h3>Professional</h3>
                         <div class="price">
                             <span class="currency">$</span>
-                            <span class="amount">18,000</span>
+                            <span class="amount">20,000</span>
                             <span class="period">/project</span>
                         </div>
                         <div style="color: #64748B; font-size: 0.875rem; margin-top: 0.5rem;">
-                            $0.18 per work item (10% bulk discount)
+                            $0.20 per work item (20% bulk discount)
                         </div>
                     </div>
                     <ul class="pricing-features">
@@ -538,7 +537,7 @@
                         <li><i class="fas fa-check"></i> 90-day support window</li>
                         <li><i class="fas fa-check"></i> Custom field mapping</li>
                         <li><i class="fas fa-check"></i> Dedicated migration consultant</li>
-                        <li style="color: #0066FF; font-weight: 600;"><i class="fas fa-tag"></i> Best value - 28% cheaper!</li>
+                        <li style="color: #0066FF; font-weight: 600;"><i class="fas fa-tag"></i> Best value - 20% discount!</li>
                     </ul>
                     <a href="#contact" class="btn btn-primary">Get Started</a>
                 </div>
@@ -549,7 +548,7 @@
                             <span class="amount">Custom</span>
                         </div>
                         <div style="color: #64748B; font-size: 0.875rem; margin-top: 0.5rem;">
-                            $0.15 per work item (volume pricing)
+                            $0.18 per work item (volume pricing)
                         </div>
                     </div>
                     <ul class="pricing-features">
@@ -561,7 +560,7 @@
                         <li><i class="fas fa-check"></i> Custom integrations</li>
                         <li><i class="fas fa-check"></i> On-premise deployment</li>
                         <li><i class="fas fa-check"></i> SLA guarantees</li>
-                        <li style="color: #0066FF; font-weight: 600;"><i class="fas fa-tag"></i> Up to 40% savings</li>
+                        <li style="color: #0066FF; font-weight: 600;"><i class="fas fa-tag"></i> Best enterprise rate - 28% off</li>
                     </ul>
                     <a href="#contact" class="btn btn-outline">Contact Sales</a>
                 </div>
