changes in design

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <li><a href="#contact" class="nav-link">Contact</a></li>
                 </ul>
                 <div class="nav-actions">
-                    <a href="#demo" class="btn btn-secondary">Request Demo</a>
+                    <a href="#contact" class="btn btn-secondary">Request Demo</a>
                     <a href="#contact" class="btn btn-primary">Get Started</a>
                 </div>
                 <button class="hamburger" id="hamburger">
@@ -85,8 +85,8 @@
                 </h1>
                 <p class="hero-description">
                     Transform your enterprise migration journey with AI-driven analysis, automated workflows, 
-                    and zero-downtime execution. Migrate from Jira, VersionOne, HP ALM, and more to Azure DevOps 
-                    with 97.8% success rate.
+                    and zero-downtime execution. Migrate from <span class="highlight-text">Jira, VersionOne, HP ALM, and more to Azure DevOps</span> 
+                    with 99.9% success rate.
                 </p>
                 <div class="hero-stats">
                     <div class="stat">
@@ -98,7 +98,7 @@
                         <div class="stat-label">Data Migrated</div>
                     </div>
                     <div class="stat">
-                        <div class="stat-number">97.8%</div>
+                        <div class="stat-number">99.9%</div>
                         <div class="stat-label">Success Rate</div>
                     </div>
                     <div class="stat">
@@ -216,7 +216,6 @@
                     <div class="scenario-meta">
                         <span><i class="fas fa-clock"></i> 1 week</span>
                         <span><i class="fas fa-database"></i> 5K-50K</span>
-                        <span><i class="fas fa-percent"></i> 98.1%</span>
                     </div>
                     <div class="scenario-features">
                         <span>Cloud API</span>
@@ -244,7 +243,6 @@
                     <div class="scenario-meta">
                         <span><i class="fas fa-clock"></i> 2-4 weeks</span>
                         <span><i class="fas fa-database"></i> 20K-200K</span>
-                        <span><i class="fas fa-percent"></i> 92.5%</span>
                     </div>
                     <div class="scenario-features">
                         <span>Test Migration</span>
@@ -272,7 +270,6 @@
                     <div class="scenario-meta">
                         <span><i class="fas fa-clock"></i> 2-3 weeks</span>
                         <span><i class="fas fa-database"></i> 50K-500K</span>
-                        <span><i class="fas fa-percent"></i> 94.2%</span>
                     </div>
                     <div class="scenario-features">
                         <span>Portfolio Mapping</span>
@@ -300,7 +297,6 @@
                     <div class="scenario-meta">
                         <span><i class="fas fa-clock"></i> 12-18 weeks</span>
                         <span><i class="fas fa-database"></i> 50K-500K</span>
-                        <span><i class="fas fa-percent"></i> 78.3%</span>
                     </div>
                     <div class="scenario-features">
                         <span>Requirement Hierarchy</span>
@@ -328,7 +324,6 @@
                     <div class="scenario-meta">
                         <span><i class="fas fa-clock"></i> 1-2 weeks</span>
                         <span><i class="fas fa-database"></i> 10K-100K</span>
-                        <span><i class="fas fa-percent"></i> 96.8%</span>
                     </div>
                     <div class="scenario-features">
                         <span>On-premise</span>
@@ -356,7 +351,6 @@
                     <div class="scenario-meta">
                         <span><i class="fas fa-clock"></i> 3-4 weeks</span>
                         <span><i class="fas fa-database"></i> 25K-250K</span>
-                        <span><i class="fas fa-percent"></i> 91.5%</span>
                     </div>
                     <div class="scenario-features">
                         <span>App Migration</span>
@@ -384,7 +378,6 @@
                     <div class="scenario-meta">
                         <span><i class="fas fa-clock"></i> 3-5 days</span>
                         <span><i class="fas fa-database"></i> 1K-10K</span>
-                        <span><i class="fas fa-percent"></i> 99.2%</span>
                     </div>
                     <div class="scenario-features">
                         <span>Repository</span>
@@ -412,7 +405,6 @@
                     <div class="scenario-meta">
                         <span><i class="fas fa-clock"></i> 1 week</span>
                         <span><i class="fas fa-database"></i> 5K-25K</span>
-                        <span><i class="fas fa-percent"></i> 97.6%</span>
                     </div>
                     <div class="scenario-features">
                         <span>Issue Conversion</span>
@@ -687,7 +679,7 @@
                         <li><a href="#features">Features</a></li>
                         <li><a href="#scenarios">Migration Scenarios</a></li>
                         <li><a href="#pricing">Pricing</a></li>
-                        <li><a href="#demo">Request Demo</a></li>
+                        <li><a href="#contact">Request Demo</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
