--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="hero-cta">
-                    <a href="#demo" class="btn btn-primary btn-lg">
+                    <a href="docs/index.html" class="btn btn-primary btn-lg">
                         <i class="fas fa-play-circle"></i>
                         Start Free Analysis
                     </a>
@@ -567,7 +567,7 @@
                 <h2>Ready to Start Your Migration Journey?</h2>
                 <p>Get a free migration analysis and discover how OpsMigrator can transform your ALM systems</p>
                 <div class="cta-buttons">
-                    <a href="#demo" class="btn btn-primary btn-lg">
+                    <a href="docs/index.html" class="btn btn-primary btn-lg">
                         <i class="fas fa-calendar-check"></i>
                         Schedule Free Demo
                     </a>
